# jarvis-harness

./: .gitignore  DEPLOY.md  HEARTBEAT.md  calculator.py  main.py  pyproject.toml  pyrightconfig.json  run.py
config/: global.json
config/sessions/: session_cli.json
docs/superpowers/plans/: 2026-06-15-jarvis-harness-implementation.md  2026-06-15-subagent-spawner.md  2026-06-16-channels-subagents-memory.md  (+3 more)
jarvis/: __init__.py  config.py  cron.py  events.py  harness.py  heartbeat.py  hooks.py  kernel.py  mcp.py  media.py  memory_store.py  retry.py  runtime.py  sessions.py  skills.py  subagent.py  tools.py
jarvis/channels/: base.py  cli.py  discord.py  qq.py  webhook.py
jarvis/memory/: __init__.py  base.py  jsonl.py
jarvis/models/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  openai_compatible.py
jarvis/transports/: __init__.py  cli.py  discord.py  qq.py
prompts/: system.md
tests/: test_channels.py  test_cli_transport.py  test_compression_hook.py  test_config_models.py  test_error_recovery.py  test_events.py  test_gateway.py  test_harness.py  test_heartbeat.py  test_history_hook.py  test_hooks_extensions.py  test_integration.py  test_kernel.py  test_kernel_streaming.py  test_mcp_client.py  test_media_chunking.py  test_memory.py  test_model_providers.py  test_runtime.py  test_safety_hooks.py  test_semantic_memory.py  test_semantic_memory_purge.py  test_session_refresh_hook.py  test_skills.py  test_subagent.py  test_subagents.py  test_tools.py  test_transports.py  test_voice_fallback.py  test_write_and_embedding.py
(+7 files in other folders)
