[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord.py>=2.4.0",
    "qq-botpy>=1.2.0",
    "openai>=1.50.0",
    "anthropic>=0.30.0",
    "pyyaml>=6.0.3",
    "mcp>=1.27.2",
]

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "uvicorn>=0.49.0",
]
